[tool.poetry]
authors = ["Arpad Fulop <data.ombudsman@mailbox.org>"]
description = "Implementation of IncrementalDBSCAN clustering."
license = "BSD-3-Clause"
name = "incdbscan"
version = "0.4.0"
readme = "README.md"
homepage = "https://github.com/DataOmbudsman/incdbscan"
repository = "https://github.com/DataOmbudsman/incdbscan"
keywords = [
    "clustering",
    "incremental clustering"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
numpy = ">=1.26.4"
python = ">=3.10.0,<4.0"
rustworkx = "^0.15.0"
scikit-learn = "^1.5.0"
sortedcontainers = "^2.4.0"
xxhash = "^3.5.0"

[tool.poetry.group.dev.dependencies]
isort = "^7.0.0"
jupyterlab = "^4.5.0"
line-profiler = "^5.0.0"
matplotlib = "^3.10.1"
pandas = "^2.3.1"
pylint = "^4.0.1"
pytest = "^9.0.1"
requests = "^2.32.3"
tqdm = "^4.67.1"

[build-system]
requires = ["poetry_core >= 1.8.1"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
known_first_party = ["testutils"]
profile = "pycharm"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]